--- a/404.html
+++ b/404.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from themewagon.github.io/Industrio/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 18 Aug 2024 18:35:53 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
-    <title>Industro - Industrial HTML Template</title>
+    <title>SHREE ELECTRA</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -22,8 +20,8 @@
         rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link href="../../cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="../../cdn.jsdelivr.net/npm/bootstrap-icons%401.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="cdn.jsdelivr.net/npm/bootstrap-icons%401.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -71,7 +69,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <h1 class="text-white m-0">Industro</h1>
+            <h1 class="text-white m-0">SHREE ELECTRA</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -205,8 +203,8 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="../../code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="../../cdn.jsdelivr.net/npm/bootstrap%405.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="cdn.jsdelivr.net/npm/bootstrap%405.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
@@ -217,6 +215,4 @@
     <script src="js/main.js"></script>
 </body>
 
-
-<!-- Mirrored from themewagon.github.io/Industrio/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 18 Aug 2024 18:35:53 GMT -->
 </html>
